--- a/index.html
+++ b/index.html
@@ -146,19 +146,19 @@
             const skillsData = [
                 {
                     category: 'iOS Development',
-                    skills: ['Swift', 'SwiftUI', 'Objective-C', 'Xcode', 'AppStore Submission', 'Core Data']
+                    skills: ['Swift', 'SwiftUI', 'Objective-C', 'Xcode', 'AppStore Submission', 'Core Data', 'Realm + ServerLess Database', 'SSL Pinning', 'Sensitive Data Prevention', 'Secure(Encrypted) Local Storage']
                 },
                 {
                     category: 'Software Architecture & Design Patterns',
-                    skills: ['MVVM (Model-View-ViewModel)', 'Clean Architecture', 'VIPER']
+                    skills: ['MVC', 'MVVM (Model-View-ViewModel)', 'Clean Architecture', 'VIPER']
                 },
                 {
                     category: 'Methodologies & Tools',
-                    skills: ['Agile', 'JIRA', 'GIT', 'Subversion', 'Unit Testing', 'UI Testing', 'CI/CD']
+                    skills: ['Agile', 'JIRA', 'Asaana', 'GIT', 'Subversion', 'Unit Testing', 'UI Testing', 'CI/CD']
                 },
                 {
                     category: 'Programming Languages',
-                    skills: ['Swift', 'Javascript', 'Typescript', 'Java (SpringBoot)', 'Python (Automation)']
+                    skills: ['Swift', 'Javascript', 'ROR', 'Typescript', 'Java (SpringBoot)', 'Python (Automation)']
                 },
                 {
                     category: 'Other',
