YourPDi Project added

--- a/index.html
+++ b/index.html
@@ -226,6 +226,17 @@
                     ]
                 },
                 {
+                    id: 'yourpdi',
+                    title: 'YourPDi',
+                    description: 'Developed core iOS features with secure AWS encrypted storage, offline caching, and data syncing with performance optimizations.',
+                    details: [
+                        '<strong>Flagship iOS Development:</strong> Led the launch of a flagship app, achieving 1M+ downloads and a 4.5★ App Store rating, driving user engagement and brand visibility.',
+                        '<strong>Code Modernization & Cloud Security:</strong> Migrated legacy Objective-C codebase to Swift, improving performance by <strong>30%</strong> and reducing maintenance costs by <strong>25%</strong>; implemented secure AWS storage with offline caching.',
+                        '<strong>Collaboration & Innovation:</strong> Partnered with cross-functional teams and integrated cloud services/APIs, enhancing functionality and boosting user retention by 20%.'
+                    ],
+                    hasChart: true
+                },
+                {
                     id: 'kualitee',
                     title: 'Kualitee SDK',
                     description: 'A private SDK for in-app bug reporting.',
